# Procedural-Spirograph

./: CMakeLists.txt  LICENSE  README.md
include/: ColorPalettes.hpp  Pendulum.hpp
src/: Pendulum.cpp  main.cpp
